# car-server

./: .gitignore
door-module/: Cargo.toml
door-module/src/: main.rs
door-module/src/app/: events.rs  state.rs
door-module/src/hal/: input.rs  mod.rs  output.rs  power_window_driver.rs
door-module/src/http/: server.rs
door-module/src/io/: input.rs
door-module/src/svc/: mod.rs  power_windows.rs
main-server/: Cargo.toml
main-server/.cargo/: config.toml
main-server/src/: main.rs
main-server/src/app/: app_state.rs  mod.rs  request_type.rs
main-server/src/bt/: config.rs  handlers.rs  mod.rs  server.rs
main-server/src/clients/: addresses.rs  list.rs  mod.rs  types.rs
main-server/src/hal/: mod.rs  power_window_controls_driver.rs  power_window_input.rs
main-server/src/svc/: clients.rs  mod.rs  power_window.rs  rest_client.rs
shared-lib/: Cargo.toml
shared-lib/.cargo/: config.toml
shared-lib/src/: lib.rs  system.rs
shared-lib/src/dto/: mod.rs  pw_config.rs
shared-lib/src/hal/: adc.rs
shared-lib/src/http/: endpoints.rs
shared-lib/src/wifi/: client.rs  config.rs  ext.rs  mac.rs  mod.rs  server.rs
