[package]
name = "main-server"
version = "0.1.0"
authors = ["Nepellion <nepellion@proton.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
esp-idf-hal = { version = "0.42", default-features = false, features = ["embassy-sync"] }
anyhow = "1.0.75"
futures = "0.3"
embedded-svc = "0.26.4"
esp-idf-sys = "0.33.7"
esp32-nimble = { version = "0.3.1", default-features = false }
critical-section = { version = "1.1.1" }
shared-lib = { path = "../shared-lib" }

[build-dependencies]
embuild = "0.31.3"
